# twamp-light

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TwampLightReflector.ipp  TwampLightSender.ipp  TwampLitePacket.ipp  TwampLiteReflector.ipp  TwampLiteSender.ipp  twamp.hpp
include/: TwampLight.hpp  TwampLightPacket.ipp  TwampLightReflector.ipp  TwampLightSender.ipp  twamp_light.hpp
src/: main.cpp  twamp_light_packet.cpp  twamp_light_reflector.cpp  twamp_light_sender.cpp
